# ptb_ltc_mirror

./: .gitignore  bronze.ipynb  databricks.yml  gold.ipynb  pyproject.toml  requirements-dev.txt  setup.py  silver.ipynb
.github/workflows/: lint-cicd-workflow-files.yml  ptb-ltc-bundle-cd-prod.yml  ptb-ltc-bundle-cd-staging.yml  ptb-ltc-bundle-ci.yml  ptb-ltc-bundle-run-e2e-pipelines.yml  ptb-ltc-project-ci.yml
.ltc_env/: pyvenv.cfg
ptb_ltc/config/: core.py  general_config.yaml  model_config.yaml  processing_config.yaml
ptb_ltc/processing/: processing_utils.py
resources/: batch-inference-workflow-resource.yml  feature-engineering-workflow-resource.yml  ml-artifacts-resource.yml  model-workflow-resource.yml
scratch/: split_orig_train_data_3_parts.ipynb
src/: README.md  bronze.py  gold.py  hp_tuning.py  predict.py  process_labels.py  silver.py  train.py  validate.py
src/logs/: README.md
src/ptb_ltc/: logging.py  pipeline.py  spark.py
src/ptb_ltc/config/: core.py  general_config.yaml  gold_expectations.yaml  model_config.yaml  processing_config.yaml
src/ptb_ltc/data/: data_manager.py  gx_manager.py
src/ptb_ltc/deploy/: deploy_utils.py  deploy_utils_ws.py
src/ptb_ltc/evaluate/: evaluation_metrics.py  visualization.py
src/ptb_ltc/optimize/: loss_function.py  model_hp.py  param_space.py  smote_hp.py
src/ptb_ltc/processing/: features.py  processing_utils.py
src/tests/: run_unit_tests.py
src/tests/code/: test_processing_utils.py
