[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

# Configuration for black formatter
[tool.black]
target-version = ['py311']

# Configuration for isort formatter
[tool.isort]
profile = "black"
line_length = 100
lines_between_sections = 1
known_first_party = "sentry"
skip = "migrations"

# Configuration for mypy
[tool.mypy]
mypy_path = "src"
check_untyped_defs = true 
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

# Configuration for pytest
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rfEX -p pytester --strict-markers --cov=ptb_ltc"
testpaths = [
    "tests"
]
# Markers
markers = [
    "processing_utils: test related to the processing_utils submodule",
]
# Files to consider for testing
python_files = ["test_*.py", "*_test.py"]
# Classes to consider for testing
python_classes = ["*Test", "Test*"]
# Functions to consider for testing
python_functions = ["test"]
# Consider test that are expected to fail but did NOT fail is considered a failure in pytest
xfail_strict = true
# Filter Warnings
filterwarnings = [
    "ignore::DeprecationWarning",
]












